# YOLO-AUTO

./: LICENSE  README.md  start-dev.sh
.github/workflows/: ci.yml
backend/: .env.example  environment.yml  pyproject.toml  yolo_auto.db
backend/alembic/: env.py
backend/alembic/versions/: a7daccc22ddc_create_yolo_version_table.py  ae550bdd2f77_simplify_yoloversion_model_and_remove_.py  d34b491ac907_remove_paper_url_from_yoloversion.py  f528b38a6f06_add_yolomodule_table_and_relationship.py
backend/app/: initial_data.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: yolo_modules.py  yolo_versions.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  base.py  crud_yolo_module.py  crud_yolo_version.py
backend/app/db/: __init__.py  session.py
backend/app/models/: yolo_version.py
backend/app/schemas/: __init__.py  yolo_module.py  yolo_version.py
frontend/dashboard/: package-lock.json  package.json
frontend/dashboard/src/: App.css  App.tsx  main.tsx
frontend/dashboard/src/components/: YoloEditor.css  YoloEditor.tsx  YoloModuleList.tsx  YoloVersionList.tsx
frontend/dashboard/src/models/: yolo.ts
frontend/dashboard/src/services/: api.ts
